# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  database.py  dto.py  main.py  parse.py  service.py
page_analyzer/templates/: home.html  index.html  layout.html  show.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
